# barata_api

./: .dcoder_run  .gitignore  Satellites.csv  manage.py  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/beam/csk/: himage_beam.csv  hugeregion_beam.csv  pingpong_beam.csv  spotlight_beam.csv  wideregion_beam.csv
api/beam/rs2/: extrafine_beam.csv  highincidence_beam.csv  narrow_beam.csv
api/data/: Beams.csv  Sensors.csv
api/migrations/: 0001_initial.py  0002_alter_planning_angle.py  0003_alter_planning_angle.py  0004_auto_20210928_2149.py  0005_auto_20210928_2152.py  0006_auto_20210928_2158.py
barata/: asgi.py  settings.py  urls.py  wsgi.py
dashboard/: urls.py  views.py
staticfiles/: style.css
templates/: base.html  navbar.html
templates/api/: api_home.html
templates/dashboard/: dashboard.html
